{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 73,
  "lineage": "f8eae57e-7594-78d2-4a1d-3c325634bb59",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:security-group/sg-0710292f751eb6b50",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0710292f751eb6b50",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node_group_one20220904022046974300000006",
            "name_prefix": "node_group_one",
            "owner_id": "453755074041",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08a0c8a5cf99e6d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.eks-project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "internal_project_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:route-table/rtb-0a62cb259a4a7b568",
            "default_route_table_id": "rtb-0a62cb259a4a7b568",
            "id": "rtb-0a62cb259a4a7b568",
            "owner_id": "453755074041",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045090854d25a738c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-project"
            },
            "tags_all": {
              "Name": "eks-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a0c8a5cf99e6d07"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.project-gw",
            "module.vpc.aws_vpc.eks-project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:internet-gateway/igw-045090854d25a738c",
            "id": "igw-045090854d25a738c",
            "owner_id": "453755074041",
            "tags": {
              "Name": "eks-project"
            },
            "tags_all": {
              "Name": "eks-project"
            },
            "vpc_id": "vpc-08a0c8a5cf99e6d07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-project"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e97f8606bc4ea59",
            "route_table_id": "rtb-0a62cb259a4a7b568",
            "subnet_id": "subnet-01507d66d5c101dae"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_project_default",
            "module.vpc.aws_internet_gateway.project-gw",
            "module.vpc.aws_subnet.public_project_subnet",
            "module.vpc.aws_vpc.eks-project",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078ed17509875f81a",
            "route_table_id": "rtb-0a62cb259a4a7b568",
            "subnet_id": "subnet-0eb84dd4fbf0c9006"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.internal_project_default",
            "module.vpc.aws_internet_gateway.project-gw",
            "module.vpc.aws_subnet.public_project_subnet",
            "module.vpc.aws_vpc.eks-project",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:subnet/subnet-01507d66d5c101dae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01507d66d5c101dae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "453755074041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-project"
            },
            "tags_all": {
              "Name": "eks-project"
            },
            "vpc_id": "vpc-08a0c8a5cf99e6d07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-project",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:subnet/subnet-0eb84dd4fbf0c9006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb84dd4fbf0c9006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "453755074041",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-project"
            },
            "tags_all": {
              "Name": "eks-project"
            },
            "vpc_id": "vpc-08a0c8a5cf99e6d07"
          },
          "dependencies": [
            "module.vpc.aws_vpc.eks-project",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.random_shuffle.az_list"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:453755074041:vpc/vpc-08a0c8a5cf99e6d07",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008b1a14b9fe03c64",
            "default_route_table_id": "rtb-0a62cb259a4a7b568",
            "default_security_group_id": "sg-0fbfc38b15b150b2c",
            "dhcp_options_id": "dopt-0d7df34626afddf1d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08a0c8a5cf99e6d07",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a62cb259a4a7b568",
            "owner_id": "453755074041",
            "tags": {
              "Name": "eks-project"
            },
            "tags_all": {
              "Name": "eks-project"
            }
          }
        }
      ]
    }
  ]
}